articles/article.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');

html
{
	background-color: #1F1F1F;
	width: 100vw;
	/* https://stackoverflow.com/questions/23367345/100vw-causing-horizontal-overflow-but-only-if-more-than-one/23367686
	Browsers mishandle width: 100vw by including the vertical scrollbar. max-width fixes this. */
	max-width: 100%;
}

#tableOfContents
{
	float: right;
	margin-top: 15%;
	margin-right: 15%;
	margin-left: 0;
	padding: 0;
	text-decoration: none;
	color: white;
	list-style-type: none;
	font-size: 21px;
}

#tableOfContents li
{
	margin-top: .5em;
}

.selected
{
	font-weight: bold;
}

header a
{
	position: fixed;
	font-size: 36px;
	text-decoration: none;
	color: #FFC114;
	top: 5%;
	left: 5%;
}

article
{
	position: relative;
	margin-bottom: 3%;
	padding: 0;
	margin-left: auto;
	margin-right: auto;
	width: 50%;
	color: white;
}

article table
{
	border-collapse: collapse;
}

td, th
{
	border: 1px solid #999;
	padding: 0.5rem;
	text-align: center;
}

article img
{
	display: block;
	max-height: 40vh;
	margin-left: auto;
	margin-right: auto;
}

article h1
{
	font-size: 48px;
}

article h2
{
	font-size: 30px;
}

article h3
{
	font-size: 25px;
}

article p
{
	font-size: 21px;
}

article figcaption
{
	font-size: 15px;
	text-align: center;
	color: rgba(217, 217, 217, 1);
	margin-bottom: 2%;
	margin-top: 0;
	padding: 0;
	font-family: Roboto;
	font-style: italic;
	font-weight: 300;
}

article blockquote
{
	position: relative;
	font-size: 21px;
}

article blockquote::before
{
	content: "";
	height: 100%;
	width: 2px;
	background-color: white;
	position: absolute;
	bottom: 0;
	left: -2%;
	display: block;
}

article code
{
	font-size: 18px;
}

article p code
{
	background-color: #3F3F3F;
}

@media print
{
	html, article
	{
		background-color: white;
		color: black;
	}

	article
	{
		width: 100%;
		margin: 0;
		padding: 0;
	}

	article p
	{
		font-size: 14px;
	}

	article h1
	{
		font-size: 30px;
	}

	article h2
	{
		font-size: 20px;
	}

	article h3
	{
		font-size: 17px;
	}

	article img
	{
		max-width: 40%;
	}

	header
	{
		visibility: hidden;
	}

	article figcaption
	{
		color: rgba(17, 17, 17, 1);
	}
	
	article blockquote
	{
		font-size: 14px;
	}

	article blockquote::before
	{
		background-color: black;
	}

	article code
	{
		font-size: 14px;
	}

	article p code
	{
		background-color: #EEE;
	}

	#tableOfContents
	{
		margin: 0;
		padding: 0;
		visibility: none;
	}

	#tableOfContents li
	{
		margin: 0;
		padding: 0;
		visibility: none;
	}
}

@media screen and (max-device-width: 750px)
{
	#tableOfContents
	{
		margin: 0;
		padding: 0;
		visibility: none;
	}

	#tableOfContents li
	{
		margin: 0;
		padding: 0;
		visibility: none;
	}

	article
	{
		width: 100%;
		margin: 0;
		padding: 0;
	}

	article p
	{
		font-size: 14px;
	}

	article h1
	{
		font-size: 30px;
	}

	article h2
	{
		font-size: 20px;
	}

	article h3
	{
		font-size: 17px;
	}

	article img
	{
		max-width: 60%;
	}

	article code
	{
		font-size: 12px;
	}

	header a
	{
		position: relative;
		margin-bottom: 50px;
	}
}

